Kominn er lítill spilari.
Hann fer í gang þegar síðða er ræst og spilar eitt lag sem fylgir með -
breyta því í linka á lög ekki hafa lögin sjálf inni.  play stop og pause
virkar.

--- a/player.html
+++ b/player.html
@@ -17,7 +17,7 @@
 
               // Note: this version assumes a JavaScript array of songs, but
               // the other approach is also acceptable
-              var playlist = [ "Boys_of_summer.mp3",
+              var playlist = [ "1 mannakorn-sumar_hvern_einasta_dag.mp3",
                                "http://path.to/second_song.mp3",
                                "http://path.to/third_song.mp3" ];
 
