--- a/player.html
+++ b/player.html
@@ -17,7 +17,7 @@
 
               // Note: this version assumes a JavaScript array of songs, but
               // the other approach is also acceptable
-              var playlist = [ "1 mannakorn-sumar_hvern_einasta_dag.mp3",
+              var playlist = [ "Mannakorn-sumar hvern einasta dag.mp3",
                                "http://path.to/second_song.mp3",
                                "http://path.to/third_song.mp3" ];
 
