Lagalistoi með Baggalút  vantar dropdown lista

--- a/player.html
+++ b/player.html
@@ -17,9 +17,11 @@
 
               // Note: this version assumes a JavaScript array of songs, but
               // the other approach is also acceptable
-              var playlist = [ "Mannakorn-sumar hvern einasta dag.mp3",
-                               "http://path.to/second_song.mp3",
-                               "http://path.to/third_song.mp3" ];
+              var playlist = [  "http://baggalutur.is/mp3/Hun_for_ad_fitna.mp3",
+                                "http://baggalutur.is/mp3/Baggalutur_Gaerkvoldid.mp3",
+                                "http://baggalutur.is/mp3/Eg_sef_i_bilnum.mp3",
+                                "http://baggalutur.is/mp3/Baggalutur_Afram_Island.mp3"
+                               ];
 
             var options = {autoplay:true};
               $("#thePlayer").musicPlayer( playlist, options );
