--- a/player.html
+++ b/player.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>The latest and greatest music player</title>
+    <title>The latest music player</title>
     <link rel="stylesheet" type="text/css" href="player.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" type="text/javascript"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-1.7-development-only.js" type="text/javascript"></script>
@@ -18,7 +18,7 @@
 
               // Note: this version assumes a JavaScript array of songs, but
               // the other approach is also acceptable
-              var playlist = [ "http://baggalutur.is/mp3/Hun_for_ad_fitna.mp3",
+              var playlist = [  "http://baggalutur.is/mp3/Hun_for_ad_fitna.mp3",
                                 "http://baggalutur.is/mp3/Baggalutur_Gaerkvoldid.mp3",
                                 "http://baggalutur.is/mp3/Eg_sef_i_bilnum.mp3",
                                 "http://baggalutur.is/mp3/Baggalutur_Afram_Island.mp3"
