Bætti inn einu lagi
Svona til að hafa ekki bara Baggalút en það er bara harðkóðað inn.

--- a/player.html
+++ b/player.html
@@ -18,7 +18,9 @@
 
               // Note: this version assumes a JavaScript array of songs, but
               // the other approach is also acceptable
-              var playlist = [  "http://baggalutur.is/mp3/Hun_for_ad_fitna.mp3",
+              var playlist = [  
+                                "Mannakorn-Sumar hvern einasta dag.mp3",
+                                "http://baggalutur.is/mp3/Hun_for_ad_fitna.mp3",
                                 "http://baggalutur.is/mp3/Baggalutur_Gaerkvoldid.mp3",
                                 "http://baggalutur.is/mp3/Eg_sef_i_bilnum.mp3",
                                 "http://baggalutur.is/mp3/Baggalutur_Afram_Island.mp3"
